--- a/style/main.css
+++ b/style/main.css
@@ -31,19 +31,20 @@ header .logo{
 
 header nav a{
     text-decoration: none;
-    color: #AAA;
+    color: #fff;
     margin-right: 10px;
 }
 
 header nav a:hover{
-    color: #fff;
+    
+    color: #AAA;
 }
 
 /*Filme principal*/
 .main-movie{
     font-size: 18px;
     background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50) 100%), url("/img/house-cover.jpg");
-    height: 400px;
+    height: 95vh;
     background-size: cover;
     display: flex;
     flex-direction: column;
